/**
AUTOGENERATED FROM CORE-PROTO. DO NOT EDIT.
 */
syntax = "proto3";

option java_multiple_files = true;
option java_package = "to.klay.wspro.core.game.proto";
option java_outer_classname = "ProtoEntities";

package to.klay.wspro.core.game.proto;

message WillAttackTrigger {
   TriggerCause cause = 1;
   PlayingCard attackingCard = 2;
   AttackType attackType = 3;
}

message DeckEmptyTrigger {
   TriggerCause cause = 1;
   GamePlayer player = 2;
}

message EndOfAttackTrigger {
   TriggerCause cause = 1;
   GamePlayer turnPlayer = 2;
}

enum GameVisibility {
  HIDDEN = 0;
  VISIBLE_TO_MASTER = 1;
  VISIBLE_TO_ALL = 2;
  VISIBLE_TO_OPPONENT = 3;
}

enum TurnPhase {
  STAND_PHASE = 0;
  DRAW_PHASE = 1;
  CLOCK_PHASE = 2;
  MAIN_PHASE = 3;
  CLIMAX_PHASE = 4;
  ATTACK_PHASE = 5;
  ATTACK_DECLARATION_STEP = 6;
  TRIGGER_STEP = 7;
  COUNTER_STEP = 8;
  DAMAGE_STEP = 9;
  BATTLE_STEP = 10;
  ENCORE_STEP = 11;
  END_PHASE = 12;
}

message GameOverTrigger {
   TriggerCause cause = 1;
  repeated GamePlayer losingPlayers = 2;
}

enum TriggerName {
  CARD_MOVED = 0;
  CARD_DRAWN = 1;
  CARD_DISCARDED = 2;
  ZONE_SHUFFLED = 3;
  PLAYER_LOST = 4;
  GAME_OVER = 5;
  DECK_EMPTY = 6;
  REFRESH_POINT_ADDED = 7;
  TURN_STARTED = 8;
  CARD_ORIENTED = 9;
  PHASE_START = 10;
  CLOCK_FULL = 11;
  LEVELED_UP = 12;
  CARD_CLOCKED = 13;
  CARD_ENCORED = 14;
  CARD_PLAYED = 15;
  DAMAGE_PROCESSED = 16;
  END_OF_ATTACK = 17;
  TRIGGER_CARD_CHECKED = 18;
  WILL_ATTACK = 19;
  REVERSED_IN_BATTLE = 20;
  COST_PAID = 21;
  WILL_PAY_STOCK = 22;
  ATTACK_SETUP = 23;
}

message CostPaidTrigger {
   TriggerCause cause = 1;
}

message ZoneShuffledTrigger {
   TriggerCause cause = 1;
   PlayZone zone = 2;
  repeated PlayingCard cards = 3;
   TriggerName triggerName = 4;
}

enum CardColor {
  CARD_COLOR_BLUE = 0;
  CARD_COLOR_RED = 1;
  CARD_COLOR_YELLOW = 2;
  CARD_COLOR_GREEN = 3;
  CARD_COLOR_PURPLE = 4;
}

message CardDiscardedTrigger {
   TriggerCause cause = 1;
   GamePlayer player = 2;
   PlayingCard card = 3;
}

message LocalizedString {
   GameLocale gameLocale = 1;
   string string = 2;
}

message CardDrawnTrigger {
   TriggerCause cause = 1;
   GamePlayer player = 2;
   PlayingCard card = 3;
}

enum LoseConditions {
  LEVEL4 = 0;
  EMPTY_DECK_AND_WAITING = 1;
  DRAW_CONDITION = 2;
  CONCEDE = 3;
  CARD_EFFECT_CONDITION = 4;
  GAME_ERROR = 5;
}

message PlayZone {
   GamePlayer owner = 1;
   Zones ZONE_NAME = 2;
   GameVisibility visibility = 3;
  repeated PlayingCard cardList = 4;
}

message CardClockedTrigger {
   TriggerCause cause = 1;
   GamePlayer turnPlayer = 2;
   PlayingCard card = 3;
}

message CardOrientedTrigger {
   TriggerCause cause = 1;
   PlayingCard card = 2;
   CardOrientation orientedFrom = 3;
   CardOrientation orientTo = 4;
}

message PlayerLostTrigger {
   TriggerCause cause = 1;
   GamePlayer player = 2;
   LoseConditions loseCondition = 3;
}

message CardPlayedTrigger {
   TriggerCause cause = 1;
   GamePlayer player = 2;
   PlayingCard card = 3;
   PlayZone sourceZone = 4;
   PlayZone destinationZone = 5;
}

enum CardTrigger {
  NONE = 0;
  SOUL = 1;
  RETURN = 2;
  POOL = 3;
  COMEBACK = 4;
  DRAW = 5;
  SHOT = 6;
  TREASURE = 7;
  GATE = 8;
  STANDBY = 9;
  CHOICE = 10;
}

enum TriggerCause {
  GAME_ACTION = 0;
  CARD_EFFECT = 1;
}

enum CardOrientation {
  STAND = 0;
  REST = 1;
  REVERSED = 2;
}

enum CardIcon {
  COUNTER = 0;
  CLOCK = 1;
  NO_ICON = 2;
}

enum CardType {
  CHARACTER = 0;
  EVENT = 1;
  CLIMAX = 2;
}

message PhaseStartedTrigger {
   TriggerCause cause = 1;
   GamePlayer turnPlayer = 2;
   TurnPhase identifier = 3;
}

message ClockFullTrigger {
   TriggerCause cause = 1;
   GamePlayer player = 2;
}

enum CardAffiliation {
  AFFILIATION_WEISS = 0;
  AFFILIATION_SCHWARZ = 1;
  AFFILIATION_BOTH = 2;
}

message GamePlayer {
   string playerName = 1;
}

enum GameLocale {
  JP = 0;
  EN = 1;
}

message TurnStartedTrigger {
   TriggerCause cause = 1;
   GamePlayer player = 2;
}

message CardEncoredTrigger {
   TriggerCause cause = 1;
   PlayingCard card = 2;
}

enum AttackType {
  DIRECT = 0;
  FRONTAL = 1;
  SIDE = 2;
}

message ReversedInBattleTrigger {
   TriggerCause cause = 1;
   PlayingCard reversedCard = 2;
   PlayingCard opposingCard = 3;
}

enum Zones {
  ZONE_DECK = 0;
  ZONE_HAND = 1;
  ZONE_WAITING_ROOM = 2;
  ZONE_CLOCK = 3;
  ZONE_LEVEL = 4;
  ZONE_STOCK = 5;
  ZONE_CLIMAX = 6;
  ZONE_MEMORY = 7;
  ZONE_RESOLUTION = 8;
  ZONE_CENTER_STAGE_LEFT = 9;
  ZONE_CENTER_STAGE_MIDDLE = 10;
  ZONE_CENTER_STAGE_RIGHT = 11;
  ZONE_BACK_STAGE_LEFT = 12;
  ZONE_BACK_STAGE_RIGHT = 13;
  ZONE_CENTER_STAGE_LEFT_MARKER = 14;
  ZONE_CENTER_STAGE_MIDDLE_MARKER = 15;
  ZONE_CENTER_STAGE_RIGHT_MARKER = 16;
  ZONE_BACK_STAGE_LEFT_MARKER = 17;
  ZONE_BACK_STAGE_RIGHT_MARKER = 18;
}

message CardMovedTrigger {
   TriggerCause cause = 1;
   TriggerName name = 2;
   PlayingCard sourceCard = 3;
   PlayZone sourceZone = 4;
   PlayZone destinationZone = 5;
   int32 destinationIndex = 6;
   PlayingCard destinationCard = 7;
   CardOrientation destinationOrientation = 8;
   GameVisibility destinationVisibility = 9;
}

message TriggerCheckedTrigger {
   TriggerCause cause = 1;
   PlayingCard triggerCard = 2;
}

message PlayingCard {
   string guid = 1;
   CardOrientation orientation = 2;
   GameVisibility visibility = 3;
  repeated PlayingCard markers = 4;
   bool canStand = 5;
   bool canRest = 6;
   bool canBeReversed = 7;
   bool canBeTargeted = 8;
   bool canFrontalAttack = 9;
   bool canSideAttack = 10;
   bool canDirectAttack = 11;
   int32 fundamentalOrder = 12;
  repeated LocalizedString cardName = 13;
   int32 level = 14;
   int32 cost = 15;
   CardIcon icon = 16;
   int32 power = 17;
   int32 soul = 18;
   CardColor color = 19;
   CardType cardType = 20;
  repeated LocalizedString titleName = 21;
   string id = 22;
   CardAffiliation affiliations = 23;
  repeated LocalizedString traits = 24;
  repeated CardTrigger triggerIcons = 25;
}

message DamageProcessedTrigger {
   TriggerCause cause = 1;
   PlayingCard sourceCard = 2;
   int32 amount = 3;
   GamePlayer receivingPlayer = 4;
   bool wasCancelled = 5;
}

message LeveledUpTrigger {
   TriggerCause cause = 1;
   GamePlayer player = 2;
}

message RefreshPointAddedTrigger {
   TriggerCause cause = 1;
   GamePlayer player = 2;
}

message GameTriggerProto {
  oneof triggerType {
    RefreshPointAddedTrigger refreshPointAddedTrigger = 1;
    LeveledUpTrigger leveledUpTrigger = 2;
    DamageProcessedTrigger damageProcessedTrigger = 3;
    TriggerCheckedTrigger triggerCheckedTrigger = 4;
    CardMovedTrigger cardMovedTrigger = 5;
    ReversedInBattleTrigger reversedInBattleTrigger = 6;
    CardEncoredTrigger cardEncoredTrigger = 7;
    TurnStartedTrigger turnStartedTrigger = 8;
    ClockFullTrigger clockFullTrigger = 9;
    PhaseStartedTrigger phaseStartedTrigger = 10;
    CardPlayedTrigger cardPlayedTrigger = 11;
    PlayerLostTrigger playerLostTrigger = 12;
    CardOrientedTrigger cardOrientedTrigger = 13;
    CardClockedTrigger cardClockedTrigger = 14;
    CardDrawnTrigger cardDrawnTrigger = 15;
    CardDiscardedTrigger cardDiscardedTrigger = 16;
    ZoneShuffledTrigger zoneShuffledTrigger = 17;
    CostPaidTrigger costPaidTrigger = 18;
    GameOverTrigger gameOverTrigger = 19;
    EndOfAttackTrigger endOfAttackTrigger = 20;
    DeckEmptyTrigger deckEmptyTrigger = 21;
    WillAttackTrigger willAttackTrigger = 22;

  }
}


